--- a/index_31.html
+++ b/index_31.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>31</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="font-awesome-4.7.0\css\font-awesome.min.css">
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/over_4.css">
 </head>
 
@@ -58,5 +58,5 @@
         </div>
     </div>
 </body>
-<script src="js\addRow_17.js"></script>
+<script src="js/addRow_17.js"></script>
 </html>
